--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,17 @@
     <title>Mon CV</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="output.css">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 </head>
 <body class="bg-[url('./assets/bg.png')] bg-cover bg-center bg-fixed min-h-screen">
+    <!-- Écran de chargement -->
+    <div id="loading-screen" class="fixed inset-0 bg-white z-100 flex items-center justify-center">
+        <div class="text-center">
+            <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-zinc-900 mx-auto mb-4"></div>
+            <p class="text-zinc-900 text-lg font-medium">Chargement...</p>
+        </div>
+    </div>
+
     <!-- Barre dumenu haut -->
     <header class="fixed top-0 left-0 right-0 z-50 h-[3vh] bg-black/30 flex items-center justify-between px-4 text-white text-sm font-medium">
         <div class="flex items-center space-x-4 cursor-pointer">
@@ -391,7 +400,7 @@
                 <!-- Formulaire -->
                 <div class="bg-zinc-800 pt-4 p-6">
                     <h2 class="text-2xl font-bold text-white mb-4">Formulaire de contact</h2>
-                    <form class="space-y-4">
+                    <form id="contact-form" class="space-y-4">
                         <div class="flex flex-col md:flex-row gap-4">
                             <div class="flex-1">
                                 <label for="nom" class="block text-sm font-medium text-gray-300 mb-1">Nom</label>
@@ -410,7 +419,7 @@
                             <label for="message" class="block text-sm font-medium text-gray-300 mb-1">Message</label>
                             <textarea id="message" name="message" rows="6" class="w-full px-3 py-2 border border-neutral-600 rounded-md bg-zinc-700 text-white focus:outline-none resize-none" placeholder="Votre message..." required></textarea>
                         </div>
-                        <button type="submit" class="w-full bg-green-800/70 hover:bg-green-500/80 text-white font-medium py-2 px-4 rounded-md">
+                        <button type="submit" id="submit-btn" class="w-full bg-green-800/70 hover:bg-green-500/80 text-white font-medium py-2 px-4 rounded-md transition-colors">
                             Envoyer le message
                         </button>
                     </form>
@@ -458,5 +467,6 @@
         </div>
     </section>
     <script src="https://kit.fontawesome.com/f01d0aef56.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
